modificando a pagina cursos do site

--- a/cursos/index.html
+++ b/cursos/index.html
@@ -92,7 +92,7 @@
                         <div class="name__course__stars">
                             <h2>preparação para exames escolares</h2>
                             <div class="star__area">
-                                <span>5.0</span>
+                                <span  class="curso__star__number">5.0</span>
                                 <span class="name__course__stars__star">*</span>
                             </div>
                         </div>
@@ -119,7 +119,7 @@
                         <div class="name__course__stars">
                             <h2>preparação para exames  de admissão</h2>
                             <div class="star__area">
-                                <span>5.0</span>
+                                <span class="curso__star__number">5.0</span>
                                 <span class="name__course__stars__star">*</span>
                             </div>
                         </div>
@@ -143,7 +143,7 @@
                         <div class="name__course__stars">
                             <h2>curso de  história de Moçambique</h2>
                             <div class="star__area">
-                                <span>5.0</span>
+                                <span class="curso__star__number">5.0</span>
                                 <span class="name__course__stars__star">*</span>
                             </div>
                         </div>
@@ -167,7 +167,7 @@
                         <div class="name__course__stars">
                             <h2>curso de programação web full stack</h2>
                             <div class="star__area">
-                                <span>5.0</span>
+                                <span class="curso__star__number">5.0</span>
                                 <span class="name__course__stars__star">*</span>
                             </div>
                         </div>
@@ -191,7 +191,7 @@
                         <div class="name__course__stars">
                             <h2>curso de programacao de aplicativos</h2>
                             <div class="star__area">
-                                <span>5.0</span>
+                                <span class="curso__star__number">5.0</span>
                                 <span class="name__course__stars__star">*</span>
                             </div>
                         </div>
@@ -209,13 +209,13 @@
                 </div>
                 <div class="course__card__container">
                     <div class="course__card__header">
-                        <img src="../assets/image36.jpg" alt="" loading="lazy">
+                        <img src="../assets/image40.png" alt="" loading="lazy">
                     </div>
                     <div class="course__content">
                         <div class="name__course__stars">
                             <h2>curso de design de interfaces(ui)</h2>
                             <div class="star__area">
-                                <span>5.0</span>
+                                <span class="curso__star__number">5.0</span>
                                 <span class="name__course__stars__star">*</span>
                             </div>
                         </div>
@@ -285,19 +285,19 @@
             <div class="courses__container">
                 <div class="course__card__container">
                     <div class="course__card__header">
-                        <img src="../assets/image1.jpg" alt="" loading="lazy">
+                        <img src="../assets/image39.png" alt="" loading="lazy">
                     </div>
                     <div class="course__content">
                         <div class="name__course__stars">
-                            <h2>marketing digital</h2>
+                            <h2>curso de tecnicas de memorirização</h2>
                             <div class="star__area">
-                                <span>5.0</span>
+                                <span class="curso__star__number">5.0</span>
                                 <span class="name__course__stars__star">*</span>
                             </div>
                         </div>
                         <div class="course__info">
-                            <h2>aprenda a construir de sites bonitos e responsivivos</h2>
-                            <span>html css</span>
+                            <h2>Melhore sua memorização e aprenda técnicas eficazes para reter informações com facilidade!"</h2>
+                            <span>todas tecnicas</span>
                         </div>
                         <div class="course__call__to__action">
                             <div class="course__call__to__action__button">
@@ -309,19 +309,19 @@
                 </div>
                 <div class="course__card__container">
                     <div class="course__card__header">
-                        <img src="../assets/image3.jpg" alt="" loading="lazy">
+                        <img src="../assets/image41.png" alt="" loading="lazy">
                     </div>
                     <div class="course__content">
                         <div class="name__course__stars">
-                            <h2>marketing digital</h2>
+                            <h2>curso de informatica basica e avançada</h2>
                             <div class="star__area">
-                                <span>5.0</span>
+                                <span class="curso__star__number">5.0</span>
                                 <span class="name__course__stars__star">*</span>
                             </div>
                         </div>
                         <div class="course__info">
-                            <h2>aprenda a construir de sites bonitos e responsivivos</h2>
-                            <span>html css</span>
+                            <h2>Aprenda informática básica e domine os conceitos essenciais para o dia a dia digital!</h2>
+                            <span>hardware e software</span>
                         </div>
                         <div class="course__call__to__action">
                             <div class="course__call__to__action__button">
@@ -333,19 +333,19 @@
                 </div>
                 <div class="course__card__container">
                     <div class="course__card__header">
-                        <img src="../assets/image4.jpg" alt="" loading="lazy">
+                        <img src="../assets/image44.png" alt="" loading="lazy">
                     </div>
                     <div class="course__content">
                         <div class="name__course__stars">
-                            <h2>marketing digital</h2>
+                            <h2>curso de geografia de moçambique</h2>
                             <div class="star__area">
-                                <span>5.0</span>
+                                <span class="curso__star__number">5.0</span>
                                 <span class="name__course__stars__star">*</span>
                             </div>
                         </div>
                         <div class="course__info">
-                            <h2>aprenda a construir de sites bonitos e responsivivos</h2>
-                            <span>html css</span>
+                            <h2>Explore a geografia de Moçambique e conheça a diversidade de paisagens e regiões do país!</h2>
+                            <span>do rovuma ao maputo</span>
                         </div>
                         <div class="course__call__to__action">
                             <div class="course__call__to__action__button">
