actualizando varias coisas

--- a/faleconosco/index.html
+++ b/faleconosco/index.html
@@ -67,11 +67,11 @@
                 <div class="contactos__Lista">
                     <div class="contactos__item">
                         <i  color="#444860" data-lucide="phone"></i>
-                        <span>+258 84 555 32 32 1</span>
+                        <span>+258 84 864 00 59</span>
                     </div>
                     <div class="contactos__item">
                         <i  color="#444860" data-lucide="phone-call"></i>
-                        <span>+258 84 334 32 32 1</span>
+                        <span>+258 86 864 00 59</span>
                     </div>
                     <div class="contactos__item">
                         <i  color="#444860" data-lucide="mail"></i>
@@ -155,8 +155,8 @@
 
                         </span>
                         <span>nairaschool@gmail.com</span>
-                        <span>+258 842444442</span>
-                        <span>+258 862444662</span>
+                        <span>+258 848640059</span>
+                        <span>+258 868640059</span>
                     </div>
                 </div>
 
