--- a/cursos/index.html
+++ b/cursos/index.html
@@ -370,10 +370,10 @@
                 <div class="profissionais__container__conponet">
                     <div class="profissional__card__componet">
                         <div class="profissional__card__componet__image">
-                            <img src="../assets/image10.jpg" alt="" loading="lazy">
+                            <img src="../assets/image32.jpg" alt="" loading="lazy">
                         </div>
                         <div class="profissionais__container__content__conponet">
-                            <h2>naira</h2>
+                            <h2>Camila Ferreira</h2>
                             <h3>software engenner</h3>
                             <p class="mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit iure magni quisquam natus nulla quibusdam, libero, adipisci, ipsum culpa corrupti ratione quo iusto! Ullam cupiditate suscipit dolor minus necessitatibus repudiandae?</p>
                             <a href="" class="mt-3 no-underline bg-orange-700 text-white text-lg py-2 px-5 rounded-[40px] hover:bg-orange-600"> ver mais</a>
@@ -381,10 +381,10 @@
                     </div>
                     <div class="profissional__card__componet">
                         <div class="profissional__card__componet__image">
-                            <img src="../assets/image11.jpg" alt="" loading="lazy">
+                            <img src="../assets/image31.jpg" alt="" loading="lazy">
                         </div>
                         <div class="profissionais__container__content__conponet">
-                            <h2>naira</h2>
+                            <h2>Larissa Almeida</h2>
                             <h3>software engenner</h3>
                             <p class="mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit iure magni quisquam natus nulla quibusdam, libero, adipisci, ipsum culpa corrupti ratione quo iusto! Ullam cupiditate suscipit dolor minus necessitatibus repudiandae?</p>
                             <a href="" class="mt-3 no-underline bg-orange-700 text-white text-lg py-2 px-5 rounded-[40px] hover:bg-orange-600"> ver mais</a>
@@ -392,10 +392,10 @@
                     </div>
                     <div class="profissional__card__componet">
                         <div class="profissional__card__componet__image">
-                            <img src="../assets/image8.jpg" alt="" loading="lazy">
+                            <img src="../assets/image27.jpg" alt="" loading="lazy">
                         </div>
                         <div class="profissionais__container__content__conponet">
-                            <h2>naira</h2>
+                            <h2>Viviane Costa</h2>
                             <h3>software engenner</h3>
                             <p class="mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit iure magni quisquam natus nulla quibusdam, libero, adipisci, ipsum culpa corrupti ratione quo iusto! Ullam cupiditate suscipit dolor minus necessitatibus repudiandae?</p>
                             <a href="" class="mt-3 no-underline bg-orange-700 text-white text-lg py-2 px-5 rounded-[40px] hover:bg-orange-600"> ver mais</a>
@@ -505,8 +505,8 @@
 
                         </span>
                         <span>nairaschool@gmail.com</span>
-                        <span>+258 842444442</span>
-                        <span>+258 862444662</span>
+                        <span>+258 848640059</span>
+                        <span>+258 868640059</span>
                     </div>
                 </div>
 
