actualizando a pagina do curso

--- a/cursos/index.html
+++ b/cursos/index.html
@@ -374,8 +374,12 @@
                         </div>
                         <div class="profissionais__container__content__conponet">
                             <h2>Camila Ferreira</h2>
-                            <h3>software engenner</h3>
-                            <p class="mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit iure magni quisquam natus nulla quibusdam, libero, adipisci, ipsum culpa corrupti ratione quo iusto! Ullam cupiditate suscipit dolor minus necessitatibus repudiandae?</p>
+                            <h3>professora de geografia</h3>
+                            <p class="mb-4">
+                                Com vasta experiência, a professora de Geografia traz as aulas à vida ao explorar paisagens,
+                                 culturas e fenômenos naturais. Usando mapas e recursos interativos, 
+                                ela inspira os alunos a compreender o mundo e a importância de preservar o meio ambiente.
+                            </p>
                             <a href="" class="mt-3 no-underline bg-orange-700 text-white text-lg py-2 px-5 rounded-[40px] hover:bg-orange-600"> ver mais</a>
                         </div>
                     </div>
@@ -385,9 +389,15 @@
                         </div>
                         <div class="profissionais__container__content__conponet">
                             <h2>Larissa Almeida</h2>
-                            <h3>software engenner</h3>
-                            <p class="mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit iure magni quisquam natus nulla quibusdam, libero, adipisci, ipsum culpa corrupti ratione quo iusto! Ullam cupiditate suscipit dolor minus necessitatibus repudiandae?</p>
-                            <a href="" class="mt-3 no-underline bg-orange-700 text-white text-lg py-2 px-5 rounded-[40px] hover:bg-orange-600"> ver mais</a>
+                            <h3>engenheira de software</h3>
+                            <p class="mb-4">
+                                Com ampla experiência, a professora de Programação web full stack e aplicativos ensina a
+                                transformar ideias em código. Usando métodos práticos, ela guia
+                                os alunos no desenvolvimento de 
+                                habilidades para criar soluções tecnológicas e enfrentar desafios
+                                reais do mercado.
+                            </p>
+                            <a class="call__to__action__center" href="" class="mt-3 no-underline bg-orange-700 text-white text-lg py-2 px-5 rounded-[40px] hover:bg-orange-600"> ver mais</a>
                         </div>
                     </div>
                     <div class="profissional__card__componet">
@@ -396,8 +406,13 @@
                         </div>
                         <div class="profissionais__container__content__conponet">
                             <h2>Viviane Costa</h2>
-                            <h3>software engenner</h3>
-                            <p class="mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit iure magni quisquam natus nulla quibusdam, libero, adipisci, ipsum culpa corrupti ratione quo iusto! Ullam cupiditate suscipit dolor minus necessitatibus repudiandae?</p>
+                            <h3>professora de História</h3>
+                            <p class="mb-4">
+                                Com anos de experiência em sala de aula, a professora de História 
+                                inspira seus alunos ao conectar o passado ao presente. Apaixonada pelo ensino,
+                                 ela utiliza métodos dinâmicos para tornar cada aula transformadora. 
+                                Seu objetivo é despertar a curiosidade histórica e formar cidadãos conscientes.
+                            </p>
                             <a href="" class="mt-3 no-underline bg-orange-700 text-white text-lg py-2 px-5 rounded-[40px] hover:bg-orange-600"> ver mais</a>
                         </div>
                     </div>
