actualizando o formulario de contacto

--- a/faleconosco/index.html
+++ b/faleconosco/index.html
@@ -87,7 +87,7 @@
                     </div>
                 </div>
 
-                <div class="form__container">
+                <form class="form__container">
                     <div class="header__form__contactos">
                         <h1>mande nos uma mensagem</h1>
                     </div>
@@ -103,10 +103,10 @@
 
                         <div class="message__input__submit__area">
                             <textarea name="" id="" placeholder="doigite sua messagem"></textarea>
-                            <button> enviar</button>
+                            <button type="submit"> enviar</button>
                         </div>
                     </div>
-                </div>
+                </form>
             </div>
         </div>
     </main>
