actualizando o formulario de contacto2

--- a/faleconosco/index.html
+++ b/faleconosco/index.html
@@ -95,8 +95,8 @@
                     <div class="form__area">
                         <div class="message__header">
                             <input type="text" placeholder="nome completo">
-                            <input type="text" placeholder="teu email">
-                            <input type="text" placeholder="teu telefone">
+                            <input type="email" placeholder="teu email">
+                            <input type="number" placeholder="teu telefone">
                             <input type="text" placeholder="sobre">
                         </div>
 
