actualizando o formulario no rodape

--- a/index.html
+++ b/index.html
@@ -406,10 +406,10 @@
                         os recursos que oferecemos. Não perca nenhuma oportunidade de aprender e crescer.
                         Inscreva-se agora e faça parte dessa jornada!
                     </p>
-                    <div class="footer__form__container">
-                        <input type="text" placeholder="digite teu email">
-                        <button>submeter</button>
-                    </div>
+                    <form class="footer__form__container">
+                        <input type="email" placeholder="digite teu email">
+                        <button type="reset">submeter</button>
+                    </form>
                 </div>
             </div>
 
