--- a/faleconosco/index.html
+++ b/faleconosco/index.html
@@ -97,7 +97,7 @@
                             <input type="text" placeholder="nome completo">
                             <input type="email" placeholder="teu email">
                             <input type="number" placeholder="teu telefone">
-                            <input type="text" placeholder="sobre">
+                            <input type="text" placeholder="assunto">
                         </div>
 
 
@@ -168,10 +168,10 @@
                         os recursos que oferecemos. Não perca nenhuma oportunidade de aprender e crescer.
                         Inscreva-se agora e faça parte dessa jornada!
                     </p>
-                    <div class="footer__form__container">
-                        <input type="text" placeholder="digite teu email">
-                        <button>submeter</button>
-                    </div>
+                    <form class="footer__form__container">
+                        <input type="email" placeholder="digite teu email">
+                        <button type="reset">submeter</button>
+                    </form>
                 </div>
             </div>
 
