--- a/faleconosco/index.html
+++ b/faleconosco/index.html
@@ -32,9 +32,7 @@
                         <a href="../blog/index.html">blog</a>
                     </li>
                 </ul>
-                <div class="login__button">
-                    fazer login
-                </div>
+                <a class="login__button" href="../login/fazerlogin/index.html">fazer login</a>
             </div>
         </nav>
         <div class="content__header">
@@ -102,7 +100,7 @@
 
 
                         <div class="message__input__submit__area">
-                            <textarea name="" id="" placeholder="doigite sua messagem"></textarea>
+                            <textarea name="" id="" placeholder="digite sua mensagem"></textarea>
                             <button type="submit"> enviar</button>
                         </div>
                     </div>
