--- a/quemsomos/index.html
+++ b/quemsomos/index.html
@@ -32,9 +32,7 @@
                         <a href="../blog/index.html">blog</a>
                     </li>
                 </ul>
-                <div class="login__button">
-                    fazer login
-                </div>
+                <a class="login__button" href="../login/fazerlogin/index.html">fazer login</a>
             </div>
         </nav>
         <div class="content__header">
