corigindo o nome das universidades

--- a/estudante/index.html
+++ b/estudante/index.html
@@ -187,23 +187,23 @@
                         </div>
                         <div class="instituicoes__container">
                             <div class="instituicoes__container__content">
-                                <span>univeridade eduardo mondlane de maputo </span>
-                                <span>univeridade pedagogica </span>
-                                <span>univeridade tecnica de mocambique </span>
-                                <span>univeridade sao tomas de mocambique </span>
-                                <span>univeridade catolica de mocambique </span>
-                                <span>univeridade eduardo mondlane de maputo </span>
-                                <span>univeridade pedagogica </span>
-                                <span>univeridade tecnica de mocambique </span>
-                                <span>univeridade sao tomas de mocambique </span>
-                                <span>univeridade catolica de mocambique </span>
-                                <span>univeridade sao tomas de mocambique </span>
-                                <span>univeridade catolica de mocambique </span>
-                                <span>univeridade eduardo mondlane de maputo </span>
-                                <span>univeridade pedagogica </span>
-                                <span>univeridade tecnica de mocambique </span>
-                                <span>univeridade sao tomas de mocambique </span>
-                                <span>univeridade catolica de mocambique </span>
+                                <span>universidade eduardo mondlane de maputo </span>
+                                <span>universidade pedagogica </span>
+                                <span>universidade tecnica de mocambique </span>
+                                <span>universidade sao tomas de mocambique </span>
+                                <span>universidade catolica de mocambique </span>
+                                <span>universidade eduardo mondlane de maputo </span>
+                                <span>universidade pedagogica </span>
+                                <span>universidade tecnica de mocambique </span>
+                                <span>universidade sao tomas de mocambique </span>
+                                <span>universidade catolica de mocambique </span>
+                                <span>universidade sao tomas de mocambique </span>
+                                <span>universidade catolica de mocambique </span>
+                                <span>universidade eduardo mondlane de maputo </span>
+                                <span>universidade pedagogica </span>
+                                <span>universidade tecnica de mocambique </span>
+                                <span>universidade sao tomas de mocambique </span>
+                                <span>universidade catolica de mocambique </span>
                             </div>
                         </div>
                         <div class="instituicoes__container__button__action">
