--- a/cursos/index.html
+++ b/cursos/index.html
@@ -487,18 +487,18 @@
                           alcançar seu pleno potencial!
                     </p>
                     <div class="footer__about__social__media">
-                        <div class="footer__about__social__media__area">
+                        <a href="https://www.facebook.com/profile.php?id=100070970905210" target="_blank" class="footer__about__social__media__area">
                             <i  color="#444860" data-lucide="facebook"></i>
-                        </div>
-                        <div class="footer__about__social__media__area">
+                        </a>
+                        <a  href="https://www.instagram.com/wondercandy8?igsh=c2E1dHZtZXdkZ242" target="_blank" href="#" class="footer__about__social__media__area">
                             <i  color="#444860" data-lucide="twitter"></i>
-                        </div>
-                        <div class="footer__about__social__media__area">
+                        </a>
+                        <a  href="https://www.facebook.com/profile.php?id=100070970905210" target="_blank" class="footer__about__social__media__area">
                             <i  color="#444860" data-lucide="youtube"></i>
-                        </div>
-                        <div class="footer__about__social__media__area">
+                        </a>
+                        <a href="https://www.instagram.com/wondercandy8?igsh=c2E1dHZtZXdkZ242" target="_blank" class="footer__about__social__media__area">
                             <i  color="#444860" data-lucide="instagram"></i>
-                        </div>
+                        </a>
                     </div>
                 </div>
                 <div class="footer__links">
