ultima atualizacao final

--- a/index.html
+++ b/index.html
@@ -142,9 +142,9 @@
                     <div class="card__price card__price__efeito1">
                         <span class="plain__name">Mensal</span>
                         <span class="plain__price">1200mzn</span>
-                        <div class="button__call__to__action">
+                        <a href="./telapagamentos/index.html" target="_blank" class="button__call__to__action">
                             assinar agora
-                        </div>
+                        </a>
                         <div class="card__Plain__items">
                             <div class="plain__item">
                                 <div class="circle__icon">
@@ -187,9 +187,9 @@
                     <div class="card__price plain__item__center card__price__efeito1">
                         <span class="plain__name">Anual</span>
                         <span class="plain__price">1200mzn</span>
-                        <div class="button__call__to__action">
+                        <a  href="./telapagamentos/index.html" target="_blank"  class="button__call__to__action">
                             assinar agora
-                        </div>
+                        </a>
                         <div class="card__Plain__items">
                             <div class="plain__item">
                                 <div class="circle__icon">
@@ -238,9 +238,9 @@
                     <div class="card__price card__price__efeito1">
                         <span class="plain__name">Semestral</span>
                         <span class="plain__price">1200mzn</span>
-                        <div class="button__call__to__action">
+                        <a  href="./telapagamentos/index.html" target="_blank"  class="button__call__to__action">
                             assinar agora
-                        </div>
+                        </a>
                         <div class="card__Plain__items">
                             <div class="plain__item">
                                 <div class="circle__icon">
